# Fastapi-practice

./: .env  .env.local  .gitignore  alembic.ini  main.py  pyproject.toml
alembic/versions/: 0fcb717e4bfb_added_tag_and_booktag_models.py  23be2e232006_books_table_model.py  57ae4ae7dab7_creating_book_tags.py  7303453d2466_add_roles_to_users.py  90d5c2283fef_users_table.py  c21cc5aa3389_relate_users_to_books.py  f08308484e82_add_review_table.py
src/: __init__.py  config.py  errors.py  mail.py  middleware.py
src/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/books/: bookData.py  models.py  routes.py  schemas.py  service.py
src/db/: main.py  models.py  redis.py
src/reviews/: routes.py  schemas.py  service.py
src/tags/: routes.py  schemas.py  service.py
src/tests/: conftest.py  test_auth.py  test_books.py
